# azure-terraform-playground

./: .envrc.example  .gitignore  Makefile  docker-compose.yml
docs/: architecture.drawio  handover.md  logging.md
src/app/: database.py  logging_config.py  main.py  pyproject.toml  settings.py
src/app/dependencies/: authenticator.py  deps.py  resolver.py
src/app/migration/: env.py
src/app/migration/versions/: f252d25490a6_init.py
src/app/models/: user.py
src/app/repositories/: session_manager.py  user_repository.py
src/app/routers/: user_router.py
src/app/schemas/: user.py
src/app/usecases/: auth_usecase.py  user_usecase.py
src/app/utils/: jwt.py
src/deploy/: configuration.sh  fetch_config.sh  load_key_vault.sh
src/deploy/boostrap/: account_setup.sh  create_tfstate_storage.sh
src/deploy/config/: subscription_ids.sh.example
src/deploy/maintenance/: assign_roles.sh
src/infra/: appconfig.tf  container_app.tf  database.tf  main.tf  monitoring.tf  outputs.tf  storage.tf  variables.tf
src/infra/environments/: dev.backend.hcl.example  dev.tfvars
src/utils/: init-storage-env.sh
